# advmac

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  techstack.md  techstack.yml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: lib.rs  parser.rs
tests/: const.rs  format.rs  ip.rs  parser.rs  rand.rs  serde.rs  version-numbers.rs
